# severino

./: .gitignore  LICENSE  README.md  cleanup_script.py  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  cli_commands.md  data_flow.md  edge_ai_integration.md  index.md  memory_and_rag.md  overview.md  severino_local_jetson_deployment.md  system_prompt.md  tool_management.md  tool_management_overview.md  ui_enhancements.md
docs/development_artifacts/: architecture_diagrams.md  cost.csv  use-cases.md
src/: api.py  main.py
src/actions/: base_action.py
src/cli/: __init__.py  commands.py  validation.py
src/config/: logging_config.py  settings.py  system_prompts.py
src/core/agent/: agent.py
src/core/memory/: long_term_memory_manager.py  thought_process_manager.py  working_memory_manager.py
src/core/tooling/: tool_manager.py
src/iot/: __init__.py
src/llm_inference/: __init__.py  base_llm.py  gemini_api.py  gemma_local.py  llm_factory.py
src/llm_inference/providers/: llama_cpp_provider.py
src/ml_models/: base_ml_model.py  ml_model_factory.py
src/ml_models/vision/: object_detector.py
src/perception/: sensor_factory.py
src/perception/sensors/: base_sensor.py  video_sensor.py
src/utils/: code_integrity.py  code_parser.py  embedding_generator.py  helpers.py  network_monitor.py  text_processor.py  token_counter.py  ui_elements.py
tests/: test_cli_commands.py  test_model_path.py
tests/unit/core/agent/: test_agent.py
tests/unit/core/tooling/: test_tool_manager.py
tests/unit/llm_inference/: test_llm_factory.py
tests/unit/llm_inference/providers/: test_llama_cpp_provider.py
tests/unit/ml_models/: test_ml_model_factory.py
tests/unit/ml_models/vision/: test_object_detector.py
tests/unit/perception/: test_sensor_factory.py
tests/unit/perception/sensors/: test_video_sensor.py
